--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 });
     </script>
 
-    <button class="boop" style="vertical-align:middle; background-color: #141414; position:relative; top:-100px;"><span><a href="./message" style="color: pink">TO DA MESSAGE!</a></span></button> <!-- change domain here -->
+    <button class="boop" style="vertical-align:middle; background-color: #141414; position:relative; top:-100px;"><span><a href="./message" style="color: pink">Maybe >:)</a></span></button> <!-- change domain here -->
     </div>
   <body oncontextmenu="return false"></body>
 </body>
