--- a/message/index.html
+++ b/message/index.html
@@ -158,7 +158,7 @@
 </head>
 
 <body>
-<div id="mainDiv">
+	<div id="mainDiv" <style>user-select: none;</style>>
 	<div id="content">
 		<div id="code">
 			<span class="comments">//</span><br/>
