--- a/message/index.html
+++ b/message/index.html
@@ -158,7 +158,7 @@
 </head>
 
 <body>
-	<div id="mainDiv" <style>user-select: none;</style>>
+	<div id="mainDiv" style="user-select:none">
 	<div id="content">
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js'></script>
