--- a/message/index.html
+++ b/message/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui"/>
+	<link rel="shortcut icon" type="image/png" href="https://www.clipartmax.com/png/middle/470-4700572_corazon-vector-love-symbol-couple-icon-transparent-background.png"/>
 	<title>Our Sweet Story (^^)</title>
 	<style>
     body  {
