--- a/message/index.html
+++ b/message/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui"/>
-	<link rel="shortcut icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2338/2338480.png"/>
+	<link rel="shortcut icon" type="image/png" href="https://freepngimg.com/save/126844-cute-couple-anime-png-free-photo/1024x1296"/>
 	<title>Our Sweet Story (^^)</title>
 	<style>
     body  {
